add new exercise03; link to exercise03 from index

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
       <li><em>Amor Alien</em> by Laura Molina</li>
       <li><em>Once Upon a Time in Hollywood</em> directed by Quentin Tarantino</li>
     </ol>
+
+    <h2>My Exercises</h2>
+    <ul>
+      <li><a href="exercises/exercise03.html">Exercise 03</a></li>
+    </ul>
+
   </body>
   </html>
