add styles to all sheets; update sheets

--- a/exercises/exercise03.html
+++ b/exercises/exercise03.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Exercise 03</title>
+    <link rel="stylesheet" type="text/css" href="..\assets\style3.css"
   </head/>
   <body>
     <h1><em>Woman With a Child Frightened By a Dog</em></h1>
-    <p>This piece is a drawing by Rembrandt dating back to 1636.<br/>
-      The drawing shows a piece of everyday life. The subjects are a woman and
-      child. She appears to try to bring comfort to the child as his facial expression
-      is upset while she gives a warm smile.
+    <p>This piece is a drawing by Rembrandt dating back to 1636.The drawing shows
+      a piece of everyday life.<br/>
+      The subjects are a woman and child. She appears to try to bring comfort to
+      the child as his facial<br/>
+      expression is upset while she gives a warm smile.
     </p>
 
     <h2>Links</h2>
