--- a/exercises/exercise04.html
+++ b/exercises/exercise04.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>Exercise 04</title>
-    <link rel="stylesheet" type="text/css" href="../assets/styles.css"
+    <link rel="stylesheet" type="text/css" href="..\assets\style4.css"
   </head/>
   <body>
     <h1><em>Once Upon a Time... In Hollywood</em></h1>
     <p><em>Once Upon a Time... In Hollywood</em> is the ninth film by director
-      Quentin Tarantino and stars Leonardo DiCaprio, Brad Pitt, and Margot Robbie.
-      The film takes place in 1969 with changes not only in society and youth culture
-      but also in the film industry. With multiple storylines it follows the story
-      of a fading actor, his stunt doubles, and the looming therat of the Manson
-      family. It is loosely based off the 1969 Tate-LaBianca murders.
+      Quentin Tarantino and stars Leonardo DiCaprio, Brad Pitt, and Margot Robbie.<br/>
+      The film takes place in 1969 with changes not only in society and youth
+      culture but also in the film industry. With multiple storylines it follows<br/>
+      the story of a fading actor, his stunt double, and the looming threat of
+      the Manson family. It is loosely based off the 1969 Tate-LaBianca murders.<br/>
     </p>
 
     <h2>Links</h2>
