--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Exercise 02: Homepage</title>
+    <link rel="stylesheet" type="text/css" href="assets\styleind.css"
   </head/>
   <body>
     <h1>Homepage</h1>
@@ -13,7 +14,7 @@
       <li>Painting</li>
       <li>Film</li>
     </ul>
-    <h2>My Favorite Pieces in order of Medium <em>(subject to change)</em></h2>
+    <h2>My Favorite Pieces in order of Medium</h2>
     <ol>
       <li><em>A Woman Comforting a Child Frightened by a Dog</em> by Rembrandt</li>
       <li><em>Amor Alien</em> by Laura Molina</li>
