--- a/exercises/exercise04.html
+++ b/exercises/exercise04.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Exercise 04</title>
-    <link rel="stylesheet" type="text/css" href="..\assets\style4.css"
-  </head/>
+    <link rel="stylesheet" type="text/css" href="../assets/style4.css">
+  </head>
   <body>
     <h1><em>Once Upon a Time... In Hollywood</em></h1>
     <p><em>Once Upon a Time... In Hollywood</em> is the ninth film by director
