--- a/exercises/exercise04.html
+++ b/exercises/exercise04.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Exercise 04</title>
-    <link rel="stylesheet" type="text/css" href="../assets/style4.css">
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
   </head>
   <body>
     <h1><em>Once Upon a Time... In Hollywood</em></h1>
