--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Exercise 02: Homepage</title>
-    <link rel="stylesheet" type="text/css" href="assets\styleind.css"
-  </head/>
+    <link rel="stylesheet" type="text/css" href="assets/styles.css">
+  </head>
   <body>
     <h1>Homepage</h1>
     <p>This is a page dedicated to the <strong>various</strong> forms of art
