--- a/exercises/exercise03.html
+++ b/exercises/exercise03.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Exercise 03</title>
-    <link rel="stylesheet" type="text/css" href="..\assets\style3.css"
-  </head/>
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+  </head>
   <body>
     <h1><em>Woman With a Child Frightened By a Dog</em></h1>
     <p>This piece is a drawing by Rembrandt dating back to 1636.The drawing shows
