--- a/exercises/exercise03.html
+++ b/exercises/exercise03.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Exercise 03</title>
-    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
   </head>
   <body>
     <h1><em>Woman With a Child Frightened By a Dog</em></h1>
