--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Exercise 02: Homepage</title>
-    <link rel="stylesheet" type="text/css" href="assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   </head>
   <body>
     <h1>Homepage</h1>
@@ -25,6 +25,7 @@
     <ul>
       <li><a href="exercises/exercise03.html">Exercise 03</a></li>
       <li><a href="exercises/exercise04.html">Exercise 04</a></li>
+      <li><a href="exercises/exercise05.html">Exercise 05</a></li>
     </ul>
 
   </body>
