--- a/exercises/exercise05.html
+++ b/exercises/exercise05.html
@@ -14,9 +14,9 @@
       Alternos.
     </p>
 
-    <img alt="Amor Alien by Laura Molina" title="Amor Alien" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Amor_Alien.jpg/640px-Amor_Alien.jpg" /> <br/>
+    <img alt="Amor Alien by Laura Molina" title="Amor Alien by Laura Molina" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Amor_Alien.jpg/640px-Amor_Alien.jpg" /> <br/>
 
-    <img src="../assets/images/artistlauramolina.jpg" /> </br>
+    <img alt="Laura Molina" title="Laura Molina" src="../assets/images/artistlauramolina.jpg" /> </br>
 
     <iframe width="320" height="180" src="https://www.youtube.com/embed/ORhV1YCLlvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
