--- a/exercises/exercise03.html
+++ b/exercises/exercise03.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
   </head>
   <body>
+    <div class="wrapper">
     <h1><em>Woman With a Child Frightened By a Dog</em></h1>
     <p>This piece is a drawing by Rembrandt dating back to 1636.The drawing shows
-      a piece of everyday life.<br/>
-      The subjects are a woman and child. She appears to try to bring comfort to
-      the child as his facial<br/>
-      expression is upset while she gives a warm smile.
+      a piece of everyday life. The subjects are a woman and child. She appears
+      to try to bring comfort to the child as his facial expression is upset while
+      she gives a warm smile.
     </p>
 
-    <h2>Links</h2>
+    <h3>Links</h3>
     <ul>
       <li><a href="https://www.mfab.hu/artworks/woman-with-a-child-frightened-by-a-dog/">
         Learn more</a></li>
