--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Exercise 02: Homepage</title>
+    <title>Homepage</title>
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   </head>
   <body>
+    <div class="wrapper">
     <h1>Homepage</h1>
     <p>This is a page dedicated to the <strong>various</strong> forms of art
     </p>
@@ -21,11 +22,12 @@
       <li><em>Once Upon a Time in Hollywood</em> directed by Quentin Tarantino</li>
     </ol>
 
-    <h2>My Exercises</h2>
+    <h3>My Exercises</h3>
     <ul>
       <li><a href="exercises/exercise03.html">Exercise 03</a></li>
       <li><a href="exercises/exercise04.html">Exercise 04</a></li>
       <li><a href="exercises/exercise05.html">Exercise 05</a></li>
+      <li><a href="exercises/exercise06.html">Exercise 06</a></li>
     </ul>
 
   </body>
