--- a/exercises/exercise04.html
+++ b/exercises/exercise04.html
@@ -5,16 +5,17 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
   </head>
   <body>
+    <div class="wrapper">
     <h1><em>Once Upon a Time... In Hollywood</em></h1>
     <p><em>Once Upon a Time... In Hollywood</em> is the ninth film by director
-      Quentin Tarantino and stars Leonardo DiCaprio, Brad Pitt, and Margot Robbie.<br/>
+      Quentin Tarantino and stars Leonardo DiCaprio, Brad Pitt, and Margot Robbie.
       The film takes place in 1969 with changes not only in society and youth
-      culture but also in the film industry. With multiple storylines it follows<br/>
+      culture but also in the film industry. With multiple storylines it follows
       the story of a fading actor, his stunt double, and the looming threat of
-      the Manson family. It is loosely based off the 1969 Tate-LaBianca murders.<br/>
+      the Manson family. It is loosely based off the 1969 Tate-LaBianca murders.
     </p>
 
-    <h2>Links</h2>
+    <h3>Links</h3>
     <ul>
       <li><a href="https://time.com/5635298/once-upon-a-time-in-hollywood-true-story/">
         Learn more</a></li>
