--- a/exercises/exercise05.html
+++ b/exercises/exercise05.html
@@ -5,22 +5,24 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
   </head>
   <body>
+    <div class="wrapper">
     <h1><em>Amor Alien</em></h1>
     <p><em>Amor Alien</em> is a painting by latinx visual artist Laura Molina.
       This painting was created using oil paint, fluorescent enamel and metallic
-      powder on canvas. <br/> It was completed in 2004 and was displayed at the
+      powder on canvas. It was completed in 2004 and was displayed at the
       National Museum of Mexican Art in their permanent collection. In 2019 it was
       displayed a the Queens Museum in New York for their exhibition called Mundos
       Alternos.
     </p>
 
+    <div class="image">
     <img alt="Amor Alien by Laura Molina" title="Amor Alien by Laura Molina" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Amor_Alien.jpg/640px-Amor_Alien.jpg" /> <br/>
 
     <img alt="Laura Molina" title="Laura Molina" src="../assets/images/artistlauramolina.jpg" /> </br>
 
     <iframe width="320" height="180" src="https://www.youtube.com/embed/ORhV1YCLlvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-    <h2>Links</h2>
+  </div>
+    <h3>Links</h3>
     <ul>
       <li><a href="https://journal.malcs.org/artistas/past-artists/laura-molina/">
         Learn more</a></li>
