--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><em>Once Upon a Time in Hollywood</em> directed by Quentin Tarantino</li>
     </ol>
 
-    <h3>My Exercises</h3>
+    <h3>Links</h3>
     <ul>
       <li><a href="exercises/exercise03.html">Exercise 03</a></li>
       <li><a href="exercises/exercise04.html">Exercise 04</a></li>
