--- a/exercises/exercise07.html
+++ b/exercises/exercise07.html
@@ -51,6 +51,7 @@
       <li><a href="exercise03.html">Exercise 03</a></li>
       <li><a href="exercise04.html">Exercise 04</a></li>
       <li><a href="exercise05.html">Exercise 05</a></li>
+      <li><a href="exercise06.html">Exercise 06</a></li>
     </ul>
     </main>
     <footer class="wrapper">
