--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       <li>Painting</li>
       <li>Film</li>
     </ul>
-    <h2>My Favorite Pieces in order of Medium</h2>
+    <h2>My Favorite Pieces</h2>
     <ol>
       <li><em>A Woman Comforting a Child Frightened by a Dog</em> by Rembrandt</li>
       <li><em>Amor Alien</em> by Laura Molina</li>
       <li><em>Once Upon a Time in Hollywood</em> directed by Quentin Tarantino</li>
+      <li><em>Sing Street</em> directed by John Carney</li>
     </ol>
 
     <h3>My Exercises</h3>
